fix: cropped names in messages, fixes #27

--- a/src/messaging/components/avatar/avatar.css
+++ b/src/messaging/components/avatar/avatar.css
@@ -44,5 +44,5 @@
 /* VARIABLES */
 
 .avatar {
-  --avatar-image-size: 32px;
+  --avatar-image-size: 36px;
 }
